image file name modified

--- a/index.html
+++ b/index.html
@@ -131,19 +131,14 @@
       <img class= "testimonials-image" src="images/AyushKhare.jpg" alt="AyushKhare-profile">
       <em>Ayush Khare,Student,Pune</em>
     </div>
-     <!-- <div class="carousel-item active">
-       <h2>"Hassel Free Online Classes"</h2>
-       <img class="testimonials-image" src="images/parth.png" alt="lady-profile">
-       <em>Parth Desai,Student,Goa</em>
-    </div> -->
-    <div class="carousel-item">
+         <div class="carousel-item">
       <h2>"Its very good institute to start career"</h2>
-      <img class="testimonials-image" src="images/kedar.jpg" alt="kedar-profile">
+      <img class="testimonials-image" src="images/Kedar.jpg" alt="kedar-profile">
       <em>Kedar,Teacher,Pune</em>
    </div>
    <div class="carousel-item">
      <h2>"HomeGuru provided a better platform to learn"</h2>
-     <img class="testimonials-image" src="images/kathanshah.jpg" alt="kathanshah-profile">
+     <img class="testimonials-image" src="images/KathanShah.jpg" alt="kathanshah-profile">
      <em>Kathan Shah,Studens,Ahmedabad</em>
   </div>
   </div>
