--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <title>HomeGuru</title>
@@ -85,7 +84,7 @@
   </div>
 
 </div>
-      <button type="button" class= "btn btn-dark btn-lg download-button">Login</button>
+      <!-- <button type="button" class= "btn btn-dark btn-lg download-button">Login</button>-->
       <button type="button" class= "btn btn-light btn-lg download-button"><a href="https://damp-woodland-02042.herokuapp.com" target="_blank"> Signup</a></button>
         </div>
     <div class = "index col-lg-6">
@@ -191,8 +190,8 @@
            <p>Recorded Video Lectures</p>
            <p>Unlimited online Support</p>
           <p>Cost Effective</p>
-           <button type="button" class ="btn btn-lg btn-block btn-outline-primary ">Sign Up</button>
-        </div>
+           <!-- <button type="button" class ="btn btn-lg btn-block btn-outline-primary ">Sign Up</button>-->
+        </div> 
     </div>
   </div>
   <div class = "pricing-section col-lg-6">
@@ -206,7 +205,7 @@
            <p>Hard copy of Notes</p>
            <p>Increase in Cost</p>
            <p>Unlimited online Support</p>
-           <button type="button" class ="btn btn-lg btn-block btn-dark ">Sign Up</button>
+          <!-- <button type="button" class ="btn btn-lg btn-block btn-dark ">Sign Up</button>-->
 
         </div>
     </div>
@@ -244,7 +243,7 @@
 
     <h3 class= "Dogs">Let's Learn Daily</h3>
     <button type="button" class= "btn btn-dark btn-lg download-button">Login</button>
-    <button type="button" class= "btn btn-light btn-lg download-button">Signup</button>
+    <!-- <button type="button" class= "btn btn-light btn-lg download-button">Signup</button> -->
 
   </section>
 
